deploy/k8s/namespace.yaml
apiVersion: v1
    environment: production
    name: gauas-cloud-stack
  labels:
  name: gauas-cloud-stack
metadata:
kind: Namespace
