deploy/k8s/gau-account-service.yaml
---
  type: ClusterIP
      targetPort: 8080
    - port: 8080
  ports:
    app: gau-account-http
  selector:
spec:
  namespace: gauas-cloud-stack
  name: gau-account-http-service
metadata:
kind: Service
apiVersion: v1
# Account Service HTTP Service
---

              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "20m"
            requests:
          resources:
                name: gauas-secret
            - secretRef:
                name: gauas-config
            - configMapRef:
          args: ["consumer"]
          imagePullPolicy: Always
          image: iamqbao/gau-account-service:latest
        - name: gau-account-consumer
      containers:
    spec:
        app: gau-account-consumer
      labels:
    metadata:
  template:
      app: gau-account-consumer
    matchLabels:
  selector:
  replicas: 1
spec:
  namespace: gauas-cloud-stack
  name: gau-account-consumer
metadata:
kind: Deployment
apiVersion: apps/v1
# Account Service Consumer Deployment
---

              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "50m"
            requests:
          resources:
                name: gauas-secret
            - secretRef:
                name: gauas-config
            - configMapRef:
          ports:
          imagePullPolicy: Always
          image: iamqbao/gau-account-service:latest
        - name: gau-account-http
      containers:
    spec:
        app: gau-account-http
      labels:
    metadata:
  template:
      app: gau-account-http
    matchLabels:
  selector:
  replicas: 2
spec:
  namespace: gauas-cloud-stack
  name: gau-account-http
metadata:
kind: Deployment
apiVersion: apps/v1
# Account Service HTTP Deployment
