deploy/k8s/gau-authorization-service.yaml
---
# Authorization Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-authorization-http
  namespace: gauas-cloud-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gau-authorization-http
  template:
    metadata:
      labels:
        app: gau-authorization-http
    spec:
      containers:
        - name: gau-authorization-http
          image: iamqbao/gau-authorization-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

---
# Authorization Service Service
apiVersion: v1
kind: Service
metadata:
  name: gau-authorization-http-service
  namespace: gauas-cloud-stack
spec:
  selector:
    app: gau-authorization-http
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
