deploy/k8s/gau-cloud-service.yaml
---
# Cloud Service HTTP Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-cloud-http
  namespace: gauas-cloud-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gau-cloud-http
  template:
    metadata:
      labels:
        app: gau-cloud-http
    spec:
      containers:
        - name: gau-cloud-http
          image: iamqbao/gau-cloud-service:latest
          imagePullPolicy: Always
          command: ["./entrypoint.sh"]
          args: ["http"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "512Mi"

---
# Cloud Service Consumer Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-cloud-consumer
  namespace: gauas-cloud-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gau-cloud-consumer
  template:
    metadata:
      labels:
        app: gau-cloud-consumer
    spec:
      containers:
        - name: gau-cloud-consumer
          image: iamqbao/gau-cloud-service:latest
          imagePullPolicy: Always
          command: ["./entrypoint.sh"]
          args: ["consumer"]
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "512Mi"

---
# Cloud Service HTTP Service
apiVersion: v1
kind: Service
metadata:
  name: gau-cloud-http-service
  namespace: gauas-cloud-stack
spec:
  selector:
    app: gau-cloud-http
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
